syntax             = "proto3";
option  go_package = "../pb";  // 声明生成的 go 文件所属的包
package common;

// 服务器类型
enum SERVICE {
    NONE   = 0;
    CLIENT = 1;  // 客户端
    GATE   = 2;  // 网关,转发服务
    GM     = 3;  // gamemgr
    GAME   = 4;  // game
    DB     = 5;  // db
    Dip    = 6;  // 后台服务
    Record = 7;  // 日志服务
};

// 平台类型
enum emPlatType {
    Local = 0;  // 本地
};

// 登录状态
enum LoginState {
    None    = 0;  // 未初始化
    Init    = 1;  // 初始化
    SetName = 2;  // 取名完成
};

// 服务器类型
enum PlayerDataType {
    Crystal   = 0;  // 晶核系统
    Base      = 1;  // 角色基础数据
    System    = 2;  // 角色功能数据
    Bag       = 3;  // 玩家背包
    Equipment = 4;  // 玩家装备
    Client    = 5;  // 角色前端数据
    Hero      = 6;  // 伙伴数据
    Mail      = 7;  // 邮件数据
    Max       = 8;  // 最大值

    SystemCommon       = 10;  // 功能通用系统
    SystemChat         = 11;  // 功能聊天系统
    SystemProfession   = 12;  // 功能职业系统
    SystemBox          = 13;  // 宝箱系统
    SystemBattle       = 14;  // 功能战斗系统
    SystemTask         = 15;  // 功能任务系统
    SystemShop         = 16;  // 黑市商店
    SystemDraw         = 17;  // 抽奖系统
    SystemCharge       = 18;  // 充值系统
    SystemGene         = 19;  // 基因系统
    SystemOffline      = 20;  // 离线系统
    SystemHookTech     = 21;  // 挂机科技
    SystemSevenDay     = 22;  // 七天系统
    SystemWorldBoss    = 23;  // 世界buss
    SystemChampionship = 24;  // 锦标赛
    SystemActivity     = 25;  // 活动
	SystemRepair	   = 26;  // 数据修复
    SystemMax          = 27;  // 功能最大
};

enum CHAT {
    MSG_TYPE_WORLD   = 0;
    MSG_TYPE_PRIVATE = 1;
    MSG_TYPE_ORG     = 2;
    MSG_TYPE_COUNT   = 3;
};

message PlayerData {
    uint64 PlayerID   = 1;
    string PlayerName = 2;
    int32  PlayerGold = 3;
    bool   Ok         = 4;
}

// 客户端包头
message IPacket {
    uint32  stx            = 1;
    uint32  ckx            = 2;
    SERVICE destServerType = 3;  // 发送者服务器类型
    uint64  id             = 4;  // 目标ID
    uint32  seqid          = 5;  // 序列号
    uint32  code           = 6;  // 错误码 ErrorCode
}

// 心跳包
message HeardPacket {
}

// 邮件状态
enum EmMailState {
    NoRead      = 0;  // 未读
    ReadRecieve = 1;  // 已读已领取
};

//-------------------------------------------------------------
//------------------------------ 道具列表类型
enum EmBagType {
    BagType_Equip    = 0;  // 装备背包类型
    BagType_Item     = 1;  // 道具背包类型
    BagType_PetPiece = 2;  // 碎片背包类型
    BagType_Special  = 3;  // 特殊背包类型
    BagType_GodEquip = 4;  // 神装背包类型
};

//------------------------------------------------------
//------------------------------ 道具消耗类型
enum EmItemExpendType {
    EIET_None = 0;    // 无
    EIET_Cash = 1;    // 元宝
    EIET_Gold = 2;    // 金币
	EIET_SplitScore = 25;    // 分解积分
    EIET_Max  = 100;  // 最大值
}
//------------------------------------------------------
//------------------------------ 玩家离线数据类型
enum EmPlayerOfflineType {
    EPOT_Mail = 0;  // 邮件
    EPOT_Item = 1;  // 道具
}

// 常用枚举类型
enum EmGmFuncType {
    GFT_AddItem  = 0;  // 增加道具 参数：类型 ID 数量
    GFT_AddEquip = 1;  // 增加装备 参数：装备id 品质 星级 数量
    GFT_AddHero  = 2;  // 增加英雄 参数：英雄id 星级 数量
    GFT_NB       = 3;  // 牛逼
    GFT_Relogin  = 4;  // 重登陆
	GFT_Charge   = 5;  // 直冲
}

// GM后台参数类型
enum EmGmParamType {
    GPT_None   = 0;  // gm是否开启
    GPT_GmOpen = 1;  // gm是否开启
}
//------------------------------------------------------
//------------------------------ 操作类型
enum EmDoingType {
    EDT_Gm                       = 0;   // gm后台添加
    EDT_Other                    = 1;   // 其它
    EDT_Client                   = 2;   // 客户端请求
    EDT_ItemUse                  = 3;   // 道具使用
    EDT_GiftCode                 = 4;   // 兑换码
    EDT_ProfessionLevel          = 5;   // 职业升级
    EDT_ProfessionPeakLevel      = 6;   // 职业巅峰升级
    EDT_ProfessionPartLevel      = 7;   // 职业部位升级
    EDT_EquipSplit               = 8;   // 装备分解
    EDT_HeroAwaken               = 9;   // 英雄技能觉醒
    EDT_HeroRebirth              = 10;  // 英雄重生
    EDT_BoxScoreExchange         = 11;  // 宝箱积分兑换
    EDT_Battle                   = 12;  // 战斗
    EDT_BoxConsume               = 13;  // 宝箱消耗
    EDT_BoxOpen                  = 14;  // 开宝箱
    EDT_Task                     = 15;  // 任务
    EDT_System                   = 16;  // 系统增加
    EDT_Login                    = 17;  // 登录
    EDT_ChangePlayerName         = 18;  // 修改名字
    EDT_Mail                     = 19;  // 邮件
    EDT_BlackShop                = 20;  // 黑市商店
    EDT_Advert                   = 21;  // 广告
    EDT_CrystalRobotUpgrade      = 22;  // 晶核系统机器人升级
    EDT_CrystalRedefine          = 23;  // 晶核改造消耗
    EDT_CrystalBookUpgrade       = 24;  // 晶核图鉴系统升级
    EDT_Draw                     = 25;  // 抽奖
    EDT_Charge                   = 26;  // 充值
    EDT_BattleHook               = 27;  // 挂机关卡
    EDT_Offline                  = 28;  // 离线收益
    EDT_ProfessionPartRefine     = 29;  // 职业部位精炼
    EDT_ProfessionPartRefineTupo = 30;  // 职业部位精炼突破
    EDT_HeroBook                 = 31;  // 英雄图鉴
    EDT_StarSource               = 32;  // 挂机科技
    EDT_SevenDay                 = 33;  // 七天登录
    EDT_Shop                     = 34;  // 商店
    EDT_DailyTask                = 35;  // 每日任务
    EDT_Reset                    = 36;  // 部位重置
    EDT_Entry                    = 37;  // 词条
    EDT_BattleNormal             = 38;  // 精英官咖
    EDT_StarSourceDraw           = 39;  // 星源抽奖
    EDT_RankReward               = 40;  // 排行榜奖励
    EDT_WorldBoss                = 41;  // 世界boss
    EDT_Championship             = 42;  // 锦标赛
    EDT_FirstCharge              = 43;  // 首冲
    EDT_BP                       = 44;  // bp
    EDT_ChargeCard               = 45;  // 充值卡
    EDT_ChargeGift               = 46;  // 直购礼包
    EDT_GrowRoad                 = 47;  // 成长之路
    EDT_HookTech                 = 48;  // 星源抽奖
    EDT_CrystalUpgrade           = 49;  // 晶核升级
    EDT_Adventure                = 50;  // 冒险奖励
    EDT_ItemBuy                  = 51;  // 道具购买
    EDT_Activity                 = 52;  // 活动
	EDT_AdvertEject              = 53;  // 广告弹出
}

//------------------------------------------------------
//------------------------------ 礼包兑换码类型
enum EmGiftCodeType {
    GAT_Common = 0;  // 通用礼包
    GAT_Code   = 1;  // 兑换码礼包
    GAT_Week   = 2;  // 周礼包
    GAT_Month  = 3;  // 月礼包
}

//------------------------------------------------------
//------------------------------ 战斗类型
enum EmBattleType {
    EBT_None   = 0;  // 默认
    EBT_Normal = 1;  // 精英关卡
    EBT_Tower  = 2;  // 爬塔
    EBT_Hook   = 3;  // 挂机
}
//------------------------------------------------------
//------------------------------ 任务状态
enum EmTaskState {
    ETS_Ing    = 0;  // 进行中
    ETS_Finish = 1;  // 已完成
    ETS_Award  = 2;  // 已领取
}

// ----------------商店类型
enum EmShopType {
    EST_None      = 0;
    EST_BlackShop = 1;  // 黑市商店
}

//------------------------------------------------------
//------------------------------ 系统属性类型
enum EmSyetemPropType {
    SPT_HeroBook = 0;  // 图鉴
}

message RouteInfo {
    uint32 Gate   = 1;
    uint32 Game   = 2;
    uint32 Gm     = 3;
    uint32 Db     = 4;
    uint32 Dip    = 5;
    uint32 Record = 6;
}

message RankData {
    uint32          RankType   = 1;  // 排行榜类型
    uint32          RegionID   = 2;  // 分区ID
    uint64          CreateTime = 3;  // 开启时间点
    repeated uint64 HasRewards = 7;  // 已经领取奖励的玩家
}
